Remove some serialization fields that were added in a previous commit.