@@ -16,17 +16,23 @@ import io.opensphere.analysis.binning.criteria.UniqueCriteria;
  */
 public class UniqueValueBinnerTest
 {
-    /** Tests automatic binning. */
+    /**
+     * Tests automatic binning.
+     * <p>
+     * The idea is that, even though constructed Doubles are different objects,
+     * their actual values will not be unique.
+     */
+    @SuppressWarnings("deprecation")
     @Test
     public void testAutoBin()
     {
         UniqueCriteria criteria = new UniqueCriteria();
         UniqueValueBinner<Double> binner = new UniqueValueBinner<>(criteria, d -> d.toString());
-        binner.add(Double.valueOf(0));
-        binner.add(Double.valueOf(10));
-        binner.add(Double.valueOf(0.0));
-        binner.add(Double.valueOf(10.00));
-        binner.add(Double.valueOf(34));
+        binner.add(new Double(0));
+        binner.add(new Double(10));
+        binner.add(new Double(0.0));
+        binner.add(new Double(10.00));
+        binner.add(new Double(34));
 
         Assert.assertEquals(3, binner.getBinsMap().size());
 
@@ -41,12 +47,13 @@ public class UniqueValueBinnerTest
         Assert.assertEquals(1, binner.getBinsMap().get("34.0").getSize());
         Assert.assertEquals(34., binner.getBinsMap().get("34.0").getData().get(0).doubleValue(), 0.001);
 
-        binner.remove(Double.valueOf(34));
+        binner.remove(new Double(34));
 
 //        Assert.assertEquals(0, binner.getBins().get(2).getSize());
     }
 
     /** Tests custom binning. */
+    @SuppressWarnings("deprecation")
     @Test
     public void testCustomBin()
     {
@@ -54,9 +61,9 @@ public class UniqueValueBinnerTest
         List<Bin<Double>> bins = Arrays.asList(new UniqueValueBin<>("0.0", valueFunction),
                 new UniqueValueBin<>("10.0", valueFunction));
         UniqueValueBinner<Double> binner = new UniqueValueBinner<>(bins);
-        binner.add(Double.valueOf(0));
-        binner.add(Double.valueOf(10));
-        binner.add(Double.valueOf(20));
+        binner.add(new Double(0));
+        binner.add(new Double(10));
+        binner.add(new Double(20));
 
         Assert.assertEquals(2, binner.getBins().size());
         Assert.assertEquals(0., binner.getBins().get(0).getData().get(0).doubleValue(), 0.001);
